--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
-.resourceSpace {
+.resource-space {
   height: 100px;
   border: 3px solid black;
 }
-.forest {
-  border-color: brown;
-}
+.forest { border-color: brown; }
+.claypit { border-color: red; }
+.quary { border-color: gray; }
+.river { border-color: yellow; }
 .worker-pile {
   font-weight: bold;
 }
-.player-red { color: red; }
-.player-green { color: green; }
+.player1 { color: red; }
+.player2 { color: green; }
