Show buildings as flipped until reset phase

--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,7 @@ body {
   height: 112px;
 }
 .building-empty { background: none; }
+.building-back { background: url(../images/hut_back.png); }
 .building1 { background: url(../images/hut_01.png); }
 .building4 { background: url(../images/hut_04.png); }
 .building6 { background: url(../images/hut_06.png); }
