--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ body {
   border-color: blue;
   top: 501px;
 }
-.feeding-dialog {
+.gameover, .feeding-dialog {
   position: absolute;
   top: 10px;
   left: 10px;
