--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,14 @@ body {
   width: 80px;
   height: 40px;
 }
-.worker-pile {
-  font-weight: bold;
+.meeple {
+  width: 24px;
+  height: 35px;
 }
+.meeple.player1 { background: url(../images/red_meeple.png); }
+.meeple.player2 { background: url(../images/green_meeple.png); }
+.meeple.player3 { background: url(../images/yellow_meeple.png); }
+.meeple.player4 { background: url(../images/blue_meeple.png); }
 .player-board {
   border: 3px solid black;
   position: absolute;
