--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,15 @@
 body {
   margin: 0;
   padding: 0;
-  background: url(../images/WoodTable.png) no-repeat;
+  background-image: url(../images/WoodTable.png);
+  background-size: 100%
 }
 .board {
   width: 1023px;
   height: 665px;
+  margin: -333px 0 0 -511px;
+  top: 50%;
+  left: 50%;
   background: url(../images/board.png) no-repeat;
   position: relative;
 }
