Show dice roll in a modal instead of alert

--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ body {
 .counter.gold { background-image: url(../images/gold.png); }
 
 /* Dialogs */
-.gameover, .placement-dialog, .feeding-dialog {
+.gameover, .resolution-dialog, .placement-dialog, .feeding-dialog {
   position: absolute;
   top: 10px;
   left: 10px;
