Civ card meeple positions

--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@ body {
 .specialhut .position1 { left: 10px; top: -5px; }
 .specialhut .position2 { left: 45px; top: -12px; }
 .building .position1 { left: 32px; top: 25px; }
+.civcard .position1 { left: 69px; top: 50px; }
 .forest .position1 { left: 8px; top: -11px; }
 .forest .position2 { left: 43px; top: 0px; }
 .forest .position3 { left: 15px; top: 17px; }
