--- a/css/style.css
+++ b/css/style.css
@@ -379,6 +379,7 @@ div.production-marker {
 .tool {
   width: 50px;
   height: 50px;
+  -webkit-transition: all .3s ease-in;
 }
 .tool.tapped { -webkit-transform: rotate(90deg); }
 .tool1 { background: url(images/tool_1.png) no-repeat; }
