--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ body {
 .meeple {
   width: 24px;
   height: 35px;
+  background-size: contain;
 }
 .meeple.ghost { opacity: 0.3; }
 .meeple.player1 { background: url(images/red_meeple.png); }
@@ -245,11 +246,13 @@ body {
 }
 
 .dialog .meeples {
-  width: 50%;
+  width: 240px;
   margin: auto;
 }
 
 .dialog .meeple {
+  width: 48px;
+  height: 70px;
   display: inline-block;
   cursor: pointer;
 }
